checkstyle (#80)
* checkstyle

* checkstyle